# manim

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
examples/: render_all.sh
examples/scenes/: attention_flow.py  basic_transform.py  function_story.py  linear_transform.py
mcp/: manim_server.py
references/: authoring-guide.md  examples-index.md  manim-plugin-ecosystem.md  mcp-server.md  migration-guide.md  source-survey.md
scripts/: bootstrap_sources.sh  check_environment.sh  find_outputs.sh  init_manim_project.sh  render_manim.sh  run_mcp_server.sh  texlive_env.sh
skills/manim-visualizer/: SKILL.md
templates/basic_project/: pyproject.toml
templates/basic_project/scenes/: main.py
